syntax = "proto3";
package pb;

message CaptchaDigitCfg {
    int32 height = 1;
    int32 width = 2;
    int32 maxSkew = 3;
    int32 dotCount = 4;
    int32 captchaLen = 5;
}
